...
            <Feather name={!user ? "log-in" : "log-out"} size={22} color="white" />
          </TouchableOpacity>

          <TouchableOpacity
            style={styles.menuButton}
            onPress={() => router.push("/screens/Home/HomeMenuScreen")}
            testID="menu-button"
          >
            <Feather name="menu" size={26} color="white" />
          </TouchableOpacity>
        </View>

        {/* Header Content */}
...
              testID="optimize-route-button"
            >
              <Text style={styles.routeButtonText}>{t("Optimize Route")}</Text>
            </TouchableOpacity>
          )}

          <Text style={styles.studySpotText} testID="study-spot-text">
            {t("Find your next study spot or coffee stop.")}
          </Text>
        </View>
      </View>
    </ImageBackground>
  );
...
