...

  function buildTasks() {
    const newTasks: Task[] = [];
    if (userLocation) {
      newTasks.push({
        id: "USER_LOC",
        name: "My Location (Start)",
        coordinates: userLocation,
        selected: false,
      });
    }
    for (const ev of events) {
      let coords: Coordinates | undefined;
...
