...
        customMapStyle={customMapStyle}
        showsUserLocation={true}
        loadingEnabled={true}
        scrollEnabled={true}
        zoomEnabled={true}
        onLongPress={handleMapPress}
        testID="campus-map"
      >
        {viewCampusMap && (
          <>
            {viewEatingOnCampus && userLocation && (
              <>
                <Circle
...
