appId: com.goldendoodle.expoapp
---
- tapOn:
    id: "menu-button"
- tapOn:
    id: "campus-map-button"
- tapOn:
    point: "50%,48%"
- tapOn:
    id: "building-info-modal-content-navigate-button"
- tapOn:
    id: "transit-modal-modal-go-button-2"
